--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
    
  <script type="text/javascript">
         $.feedback({
-            ajaxURL: 'http://test.url.com/feedback',
-            html2canvasURL: 'js/html2canvas.js'
+            ajaxURL: 'Feedback/sendfeedback.php',
+            html2canvasURL: 'Feedback/html2canvas.js'
         });
     </script>
 
