--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<link rel="stylesheet" href="public/feedback.css"  type="text/css" media="screen" />
+    <link rel="stylesheet" href="feedback.css" />
 <link type="text/css" href="assets/jquery/css/smoothness/jquery-ui-1.8.18.custom.css" rel="Stylesheet" />
 <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="public/main.css" />
