--- a/index.html
+++ b/index.html
@@ -38,18 +38,17 @@
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right navLinks">
+          <ul class="nav navbar-nav navbar-right navLinks page-scroll">
             <li>
-              <a href="#home"> Home</a>
-
-            </li>
-            <li>
-              <a href="#hardware"> Hardware</a>
-
+              <a href="#page-top"> Home</a>
             </li>
 	    <li>
               <a href="#software"> Software</a>
 	    </li>
+  	    <li>
+              <a href="#hardware"> Hardware</a>
+
+            </li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
