Added ionic articl article.

--- a/article/articles.html
+++ b/article/articles.html
@@ -45,10 +45,11 @@
       <div class="container">
         <section id="software">
               <center><h3>CROSS PLATFORM APP DEVELOPMENT</h3></center>
+              <br><br>
               <div class="text-left">
-                <h4>Development Cycle in Ionic</h4>
+                <h4>Development Workflow in Ionic</h4><b>Jul 30, 2016</b>
                 <div class="row">
-                  <a href="https://www.npmjs.com/package/artificial-neural-network"><img align="left" style="margin-left: 30px; margin-top: 30px;"  height="80%" width="80%" src="../img/ionicdevelopment.png"></a>
+                  <a><img align="left" style="margin-left: 30px; margin-top: 30px;"  height="80%" width="80%" src="../img/ionicdevelopment.png"></a>
                 </div>
                 <p>
                 In contrast to native app development the cross platform framework Ionic provides developers an opportunity to build for multiple platforms from a single code base. But this comes with its own cons that have to be carefully considered to decide if developing using Ionic is an economic choice given the budget limit for a specific project. As it is evident in the figure Ionic requires a total of 8 stages until the app is deployed on the app store. This figure accounts only for the front-end developer's work load. Since Ionic is built on top of Angular JS there are extra development stages which pertain to the browser(Chrome/Firefox). Because of this workflow the development timeline is much more longer than native apps.</p>
