Added blog link.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a href="#hardware"> Hardware</a>
             </li>
             <li>
-              <a href="./article/articles.html"> Articles</a>
+              <a href="http://husenxce.blogspot.ca/"> Blog</a>
             </li>
           </ul>
         </div>
