--- a/index.html
+++ b/index.html
@@ -267,6 +267,16 @@
                     The goal of this project was to implement a state machine diagram to enable robot's autonomous navigation. Sensor information was used from the front and back bumpers of the robot so when it hit a wall it rotated 180 degrees. The motors were also enabled and programmed to implement the state machine. The state machine was expressed as sub-routines where each state was implemented using a specific sub-routine. The project was written in HCS12 Assembly language and the robot was programmed using the Code Warrior IDE. [Individual Project]
                   </p>
                   <br><br><br>
+                  <h4>Analysis of Industrial Robotic Arm</h4>
+                  <div class = "row">
+                    <img class="img-responsive" src="img/robotsim1.jpg" height="500px" width="500px" alt="" style="float:left">
+                    <img class="img-responsive" src="img/robotsim2.jpg" height="500px" width="500px" alt="" style="float:left; margin-left: 50px;">
+                    <img class="img-responsive" src="img/robotsim3.jpg" height="100px" width="500px" alt="" style="float:left; margin-left: 50px;">
+                  </div>
+                  <p>
+                    The objective of this project was to find the DH Convention paramenters for the robot. And then use those paramenters to find the homogeneous transformation matrix for use in forward kinematics. Also the equations for inverse kinematics were also solved. Then the robot was simulated in matlab using Robot Toolbox. [Individual Project]
+                  </p>
+
                   <h4>PID Control Design</h4>
                   <div class = "row">
                     <img class="img-responsive" src="img/pid1.png" height="500px" width="500px" alt="" style="float:left">
