--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   After completing Stanford University's online machine learning course I wanted to implement a neural network package. Since there weren't many neural network packages for JavaScript I implemented a single layer neural network with one output. Users can use this neural network to implement stock market prediction or any other predictive operation based on labeled data. [Individual Project]
                 </p>
                 <br><br>
-                <h4>Neural JS: Machne Learning Library</h4>
+                <h4>ML Library</h4>
                 <div class="row">
                   <a href="http://machine-learning-module.herokuapp.com/" class="wiggle-me"><img align="left" style="margin-left: 30px; margin-top: 30px; height: 5%; width: 5%;" src="img/NeuralJS.png"></a>
                 </div>
