--- a/index.html
+++ b/index.html
@@ -86,7 +86,18 @@
                   <p>
                     After completing Stanford University's online machine learning course I wanted to implement a neural network package. Since there weren't many neural network packages for JavaScript I implemented a single layer neural network with one output. Users can use this neural network to implement stock market prediction or any other predictive operation based on labeled data. [Individual Project]
                   </p></div>
-                  <br><br>                 <div class="project">
+                  <br><br>  
+                   <div class="project">
+                  <h4>localStorage Mock: JavaScript</h4>
+                  <div class="row">
+                    <a href="https://www.npmjs.com/package/local-storage-mock"><img align="left" style="margin-left: 30px; margin-top: 30px;" src="img/npm.png"></a>
+                  </div>
+                  <p>
+                    Implemented localStorage npm module for mocking in NodeJS applications. [Individual Project]
+                  </p></div>
+                  <br><br>        
+
+                                 <div class="project">
                     <h4>ML Library</h4>
                     <div class="row">
                       <a href="http://machine-learning-module.herokuapp.com/" class="wiggle-me"><img align="left" style="margin-left: 30px; margin-top: 30px; height: 5%; width: 5%;" src="img/NeuralJS.png"></a>
