New sub division.

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                       This library currently contains a closed source version of the Neural Network which is more advanced, K-Means clustering and Support Vector Machine. All the modules have been implemented in JavaScript and can be used similar to npm modules. [Individual Project]
                     </p></div>
                     <br><br>
+                                    <center><h3>CONSULTING PROJECT</h3></center>
                     <div class="project">
                       <h4>Corniax Classifieds</h4>
                       <div class="row">
