--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right navLinks page-scroll">
             <li>
-              <a href="#page-top"> Home</a>
+              <a href="#page-top" id="home-link"> Home</a>
             </li>
             <li>
-              <a href="#software"> Software</a>
+              <a href="#software" id="software-link"> Software</a>
             </li>
             <li>
-              <a href="#hardware"> Hardware</a>
+              <a href="#hardware" id="hardware-link"> Hardware</a>
             </li>
             <li>
-              <a href="http://husenxce.blogspot.ca/" class="blog"> Blog</a>
+              <a href="http://husenxce.blogspot.ca/" class="blog" id="blog-link"> Blog</a>
             </li>
           </ul>
         </div>
