--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="row">
           <div style="margin: margin-top:30px;"><section id="home">
-            <center> <image src="img/profile.jpg" height="140px" width="140px" style="float: left;">
+            <center> <image src="img/profile.jpg" height="140px" width="140px" style="float: left; border-radius: 50%; border: 3px solid lightblue;">
             <div style="text-align: justify; width: 700px;" class = "intro">
               <p>
                 In this website I have listed all the significant university and side projects that I implemented thus far. I have worked on both software and hardware projects. I am interested in embedded systems programming on the hardware side and web/mobile development on software side.
