--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right navLinks page-scroll">
             <li>
-              <a href="#page-top" id="home-link"> Home</a>
+              <a href="#page-top" > Home</a>
             </li>
             <li>
-              <a href="#software" id="software-link"> Software</a>
+              <a href="#software" > Software</a>
             </li>
             <li>
-              <a href="#hardware" id="hardware-link"> Hardware</a>
+              <a href="#hardware" > Hardware</a>
             </li>
             <li>
               <a href="http://husenxce.blogspot.ca/" class="blog" id="blog-link"> Blog</a>
